--- a/index.html
+++ b/index.html
@@ -21,74 +21,156 @@
     University of Wisconsin-Madison
   </p>
 
-<h1 style="text-align: center; color: red;">
-  IN PROGRESS
-</h1>
-
-
+  <h1 style="text-align: center; color: red;">
+    IN PROGRESS
+  </h1>
 
   <h3 style="margin: 0%; font-style: italic; text-decoration: underline;">
     MATLAB Files
   </h3>
-<p style="margin: 0;">
-  <a href="DoublePendulumFractalMap.html">DoublePendulumFractalMap.m</a>
-</p>
 
-<h3 style="text-decoration: underline;">Project Description</h3>
-<p style="text-indent: 30px;">
+  <p style="margin: 0;"><a href="DoublePendulumAnimation.html">DoublePendulumAnimation.m</a> </p>
+  <p style="margin: 0;"><a href="DoublePendulumPerturbationAnimation.m">DoublePendulumPerturbationAnimation.m</a> </p>
+  <p style="margin: 0;"><a href="DoublePendulumFractalMap.html">DoublePendulumFractalMap.m</a> </p>
+  <p style="margin: 0;"><a href="DoublePendulumFractalEvolution.html">DoublePendulumFractalEvolution.m</a> </p>
+
+  <h3 style="text-decoration: underline;">Project Description</h3>
+  <p style="text-indent: 30px;">
     This is the two dimensional restricted (yet classical) double pendulum problem. The masses, 
-    sometimes modeled as evenly distrubuted along its length, will be simplified as two point masses \(m_1=m_1=m \)
+    sometimes modeled as evenly distributed along its length, will be simplified as two point masses \(m_1=m_2=m \)
     connected by two light limbs/rods of lengths \(l_1=l_2=l \) with angles \(\theta_1 \) and \(\theta_2 \) from the vertical.
     If we wish to model the system similar to the inspired paper below, the center of mass will reside at the center of 
-    each limb/rod which will result in a moment of intertia: \(I=\frac{1}{12}ml^2 \) where \(l \) is the rigid length
-    of each limb/rod. The goal of this project is to apply my knowledge of Langrangian and Hamiltonian formalisms (Physics 311)
+    each limb/rod which will result in a moment of inertia: \(I=\frac{1}{12}ml^2 \) where \(l \) is the rigid length
+    of each limb/rod; however, I will treat each pendulum as a point mass residing in the center of each ball.
+     The goal of this project is to apply my knowledge of Lagrangian and Hamiltonian formalisms (Physics 311)
     as well as applied dynamical systems (Math 415/519) to predict when the second pendulum will 'flip'. Unlike the simple pendulum one 
     might analyze in an introductory physics class, the double pendulum is chaotic. For our purpose, the definition of chaos can be defined as follows:
-    A system that is sensitive and highly dependent on initial conditions. After exploring the beauty of chaos, I will employ numerical methods
-    via MATLAB to make order from chaos. The goal is to be able to predict initial conditions that DO NOT allow the second pendulum to 'flip', but if it does,
+    <em>A system that is sensitive and highly dependent on initial conditions, hence small perturbations in these initial conditions will result
+    in vastly different behavior in finite time</em>. After exploring the beauty of chaos, I will employ numerical methods
+    via MATLAB in an attempt to make order from chaos. The goal is to be able to predict initial conditions that DO NOT allow the second pendulum to 'flip', but if it does,
     how long will it take? To gain a better understanding of my inspiration, follow the link: <a href="https://www.famaf.unc.edu.ar/~vmarconi/fiscomp/Double.pdf"> The Double Pendulum Fractal by Jeremy S. Heyl</a>
-</p>
+  </p>
 
-<img src="DoublePendulumDiagram.png" style="width: 300px; align-items: center;">
+  <div style="text-align: center;">
+    <img src="DoublePendulumDiagram.png" style="width: 30%;">
+  </div>
 
-<h3 style="text-decoration: underline;">Mathematical Model</h3>
-<p style="text-indent: 30px;">
-In order to define the system, I will use Lagrangian and Hamiltonian formalisms as previously mentioned. To start, I will derive the Lagrangian in standard 
-Cartesian coordiantes as follows:
-$$
-\begin{cases}
-x_1 = l\sin\theta_1 \\
-y_1 = -l\cos\theta_1 \\
-x_2 = x_1 + l\sin\theta_2 = l\sin\theta_1 + l\sin\theta_2 \\
-y_2 = y_1 - l\cos\theta_2 = -l\cos\theta_1 - l\cos\theta_2 \\
-\end{cases}
+  <h3 style="text-decoration: underline;">Mathematical Model</h3>
+  <p style="text-indent: 30px;">
+    In order to define the system, I will use Lagrangian and Hamiltonian formalisms as previously mentioned. To start, I will derive the Lagrangian in standard 
+    Cartesian coordinates as follows:
+    $$
+    \begin{cases}
+    x_1 = l\sin\theta_1 \\
+    y_1 = -l\cos\theta_1 \\
+    x_2 = x_1 + l\sin\theta_2 = l\sin\theta_1 + l\sin\theta_2 \\
+    y_2 = y_1 - l\cos\theta_2 = -l\cos\theta_1 - l\cos\theta_2 \\
+    \end{cases}
+    $$
+
+    $$
+    \begin{cases}
+    \dot{x_1} = l\dot{\theta_1}\cos\theta_1 \\
+    \dot{y_1} = l\dot{\theta_1}\sin\theta_1 \\
+    \dot{x_2} = \dot{x_1} + l\dot{\theta_2}\cos\theta_2 = l\dot{\theta_1}\cos\theta_1 + l\dot{\theta_2}\cos\theta_2 \\
+    \dot{y_2} = \dot{y_1} + l\dot{\theta_2}\sin\theta_2 = l\dot{\theta_1}\sin\theta_1 + l\dot{\theta_2}\sin\theta_2 \\
+    \end{cases}
+    $$
+
+    $$
+    T := \frac{1}{2}m|v|^2= \frac{1}{2}m(\dot{x_1}^2 + \dot{y_1}^2 + \dot{x_2}^2 + \dot{y_2}^2)
+    =\frac{1}{2}ml^2(2\dot{\theta_1}^2 + \dot{\theta_2}^2 + 2\dot{\theta_1}\dot{\theta_2}\cos(\theta_1-\theta_2))
+    $$
+
+    $$
+    V := -\int F_g(y)dy = mgy_1 + mgy_2 = -mgl(2\cos\theta_1 + \cos\theta_2)
+    $$
+
+    $$
+    \boxed{L := T-V=\frac{1}{2}ml^2(2\dot{\theta_1}^2 + \dot{\theta_2}^2 + 2\dot{\theta_1}\dot{\theta_2}\cos(\theta_1-\theta_2)) + mgl(2\cos\theta_1 + \cos\theta_2)}
+    $$
+
+    Now that we have derived the Lagrangian of our system, we can use the Euler-Lagrange equations in order to obtain the equations
+    of motion (EOM). Note that (\(q,\dot{q} \)) are the generalized coordinates.
+
+    $$
+    \frac{d}{dt}\Big(\frac{\partial L}{\partial \dot{q}} \Big) - \frac{\partial L}{\partial q}=0
+    $$
+
+    For \(\theta_1\):
+    $$
+    \frac{d}{dt}\Big(\frac{\partial L}{\partial \dot{\theta_1}} \Big) - \frac{\partial L}{\partial \theta_1}=0
+    $$
+
+
+    $$
+    \frac{\partial L}{\partial \dot{\theta_1}} = ml^2(2\dot{\theta_1} + \dot{\theta_2}\cos(\theta_1 - \theta_2))
+    $$
+    $$
+    \frac{\partial L}{\partial \theta_1} = -mgl(2\sin\theta_1) - ml^2(\dot{\theta_1}\dot{\theta_2}\sin(\theta_1 - \theta_2))
+    $$
+
+
+    $$
+    \frac{d}{dt}\Big(\frac{\partial L}{\partial \dot{\theta_1}} \Big) = ml^2(2\ddot{\theta_1} + \ddot{\theta_2}\cos(\theta_1 - \theta_2) - \dot{\theta_2}(\dot{\theta_1} + \dot{\theta_2})\sin(\theta_1 - \theta_2))
+    $$
+
+
+    $$
+    ml^2(2\ddot{\theta_1} + \ddot{\theta_2}\cos(\theta_1 - \theta_2) - \dot{\theta_2}(\dot{\theta_1} + \dot{\theta_2})\sin(\theta_1 - \theta_2)) + mgl(2\sin\theta_1) + ml^2(\dot{\theta_1}\dot{\theta_2}\sin(\theta_1 - \theta_2)) = 0
+    $$
+
+    $$
+    2\ddot{\theta_1} + \ddot{\theta_2}\cos(\theta_1 - \theta_2) + \frac{g}{l}(2\sin\theta_1) - \dot{\theta_2}(\dot{\theta_1} + \dot{\theta_2})\sin(\theta_1 - \theta_2) = 0
+    $$
+
+    For \(\theta_2\):
+    $$
+    \frac{d}{dt}\Big(\frac{\partial L}{\partial \dot{\theta_2}} \Big) - \frac{\partial L}{\partial \theta_2}=0
+    $$
+
+    $$
+    \frac{\partial L}{\partial \dot{\theta_2}} = ml^2(\dot{\theta_2} + \dot{\theta_1}\cos(\theta_1 - \theta_2))
+    $$
+    $$
+    \frac{\partial L}{\partial \theta_2} = -mgl\sin\theta_2 - ml^2(\dot{\theta_1}\dot{\theta_2}\sin(\theta_1 - \theta_2))
+    $$
+
+  
+    $$
+    \frac{d}{dt}\Big(\frac{\partial L}{\partial \dot{\theta_2}} \Big) = ml^2(\ddot{\theta_2} + \ddot{\theta_1}\cos(\theta_1 - \theta_2) - \dot{\theta_1}(\dot{\theta_1} + \dot{\theta_2})\sin(\theta_1 - \theta_2))
+    $$
+
+
+    $$
+    ml^2(\ddot{\theta_2} + \ddot{\theta_1}\cos(\theta_1 - \theta_2) - \dot{\theta_1}(\dot{\theta_1} + \dot{\theta_2})\sin(\theta_1 - \theta_2)) + mgl\sin\theta_2 + ml^2(\dot{\theta_1}\dot{\theta_2}\sin(\theta_1 - \theta_2)) = 0
+    $$
+
+    $$
+    \ddot{\theta_2} + \ddot{\theta_1}\cos(\theta_1 - \theta_2) + \frac{g}{l}\sin\theta_2 - \dot{\theta_1}(\dot{\theta_1} + \dot{\theta_2})\sin(\theta_1 - \theta_2) = 0
+    $$
+
+  </p>
+
+  <p style="text-indent: 30px;">
+    To solve for \( \ddot{\theta_1} \) and \( \ddot{\theta_2} \) in terms of \( \theta_1 \), \( \dot{\theta_1} \), \( \theta_2 \), and \( \dot{\theta_2} \), 
+    we use the final expressions above. This can be done by hand or by using a solver.
+  
+    The equations of motion for \( \ddot{\theta_1} \) and \( \ddot{\theta_2} \) are then given by:
+    
+
+    $$
+\boxed{
+\begin{aligned}
+\ddot{\theta_1} &= \frac{-2g\sin\theta_1 - g\sin(\theta_1 - 2\theta_2) - 2\sin(\theta_1 - \theta_2)(\dot{\theta_2}^2 l + \dot{\theta_1}^2l\cos(\theta_1 - \theta_2))}{2l(2 - \cos(2\theta_1 - 2\theta_2))} \\
+\ddot{\theta_2} &= \frac{2\sin(\theta_1 - \theta_2)(2\dot{\theta_1}^2l + 2g\cos\theta_1 + \dot{\theta_2}^2l\cos(\theta_1 - \theta_2))}{2l(2 - \cos(2\theta_1 - 2\theta_2))}
+\end{aligned}
+}
 $$
 
-$$
-\begin{cases}
-\dot{x_1} = l\dot{\theta_1}\cos\theta_1 \\
-\dot{y_1} = l\dot{\theta_1}\sin\theta_1 \\
-\dot{x_2} = \dot{x_1} + l\dot{\theta_2}\cos\theta_2 = l\dot{\theta_1}\cos\theta_1 + l\dot{\theta_2}\cos\theta_2 \\
-\dot{y_2} = \dot{y_1} + l\dot{\theta_2}\sin\theta_2 = l\dot{\theta_1}\sin\theta_1 + l\dot{\theta_2}\sin\theta_2 \\
-\end{cases}
-$$
-
-$$
-T := \frac{1}{2}m|v|^2= \frac{1}{2}m(\dot{x_1}^2 + \dot{y_1}^2 + \dot{x_2}^2 + \dot{y_2}^2)
-=\frac{1}{2}ml^2(2\dot{\theta_1}^2 + \dot{\theta_2}^2 + 2\dot{\theta_1}\dot{\theta_2}\cos(\theta_1-\theta_2))
-$$
-
-$$
-V := -\int F_g(y)dy = mgy_1 + mgy_2 = -mgl(2\cos\theta_1 + \cos\theta_2)
-$$
-
-$$
-\boxed{L := T-V=\frac{1}{2}ml^2(2\dot{\theta_1}^2 + \dot{\theta_2}^2 + 2\dot{\theta_1}\dot{\theta_2}\cos(\theta_1-\theta_2)) + mgl(2\cos\theta_1 + \cos\theta_2)}
-$$
-</p>
+  </p>
 
 </body>
-
 
 <footer style="background-color: black;color: white;text-align: center;font-size: 150%; border-bottom-left-radius: 15px; border-bottom-right-radius: 15px;">
   Tyler Jones | University of Wisconsin-Madison | AMEP
