--- a/index.html
+++ b/index.html
@@ -3,38 +3,83 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Double Pendulum</title>
+  <title>Double Pendulum Fractal</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 </head>
 
-<body style="margin-left: 10%;margin-right: 10%;">
+<style>
+  header {
+      background-color: black;
+      color: white;
+      text-align: center;
+      font-family: 'Times New Roman', Times, serif;
+      font-size: 200%;
+      width: 100%;
+      padding: 2%;
+      border-radius: 10px;
+    }
+
+    p {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 18px;
+      line-height: 1.5;
+      color: #333;
+    }
+
+    body {
+      background-color: #f5f5f5;
+    }
+
+    h2 {
+      font-family: 'Times New Roman', Times, serif;
+    }
+
+    img {
+      border-radius: 25px;
+    }
+
+    video {
+      border-radius: 25px;
+    }
+</style>
+
+<header>
+  The Double Pendulum Fractal
+</header>
+
+<body style="width: 100%; margin-left: 12.5%; margin-right: 12.5%; width: 75%;">
+  <!--
   <header style="background-color: black;color: white;text-align: center;font-size: 150%;
-  border-top-left-radius: 15px;border-top-right-radius: 15px;">The Double Pendulum</header>
+  border-top-left-radius: 15px;border-top-right-radius: 15px;">
+  The Double Pendulum Fractal
+  </header>
+  -->
   <!--<p>Math can be inline like \(2^{2x}=4\), or displayed like:</p>
   \[2^{3x}=8\]-->
-  <p style="font-size: small; text-align: center;margin-bottom: 0;">
+  <p style="font-size: large; text-align: center;margin-bottom: 0;">
     Tyler Jones
   </p>
-  <p style="font-size: small; text-align: center;margin: 0;">
+  <p style="font-size: large; text-align: center;margin: 0;">
     University of Wisconsin-Madison
   </p>
 
   <h1 style="text-align: center; color: red;">
     IN PROGRESS
   </h1>
+  
 
-  <h3 style="margin: 0%; font-style: italic; text-decoration: underline;">
+  <h2 style="margin: 0%; font-style: italic; text-decoration: underline;">
     MATLAB Files
-  </h3>
+  </h2>
 
   <p style="margin: 0;"><a href="DoublePendulumAnimation.html">DoublePendulumAnimation.m</a> </p>
   <p style="margin: 0;"><a href="DoublePendulumPerturbationAnimation.m">DoublePendulumPerturbationAnimation.m</a> </p>
   <p style="margin: 0;"><a href="DoublePendulumFractalMap.html">DoublePendulumFractalMap.m</a> </p>
   <p style="margin: 0;"><a href="DoublePendulumFractalEvolution.html">DoublePendulumFractalEvolution.m</a> </p>
 
-  <h3 style="text-decoration: underline;">Project Description</h3>
+  <h2 style="text-decoration: underline;">Project Description</h2>
   <p style="text-indent: 30px;">
     This is the two dimensional restricted (yet classical) double pendulum problem. The masses, 
     sometimes modeled as evenly distributed along its length, will be simplified as two point masses \(m_1=m_2=m \)
@@ -55,7 +100,7 @@
     <img src="DoublePendulumDiagram.png" style="width: 30%;">
   </div>
 
-  <h3 style="text-decoration: underline;">Mathematical Model</h3>
+  <h2 style="text-decoration: underline;">Mathematical Model</h2>
   <p style="text-indent: 30px;">
     In order to define the system, I will use Lagrangian and Hamiltonian formalisms as previously mentioned. To start, I will derive the Lagrangian in standard 
     Cartesian coordinates as follows:
@@ -86,9 +131,7 @@
     V := -\int F_g(y)dy = mgy_1 + mgy_2 = -mgl(2\cos\theta_1 + \cos\theta_2)
     $$
 
-    $$
-    \boxed{L := T-V=\frac{1}{2}ml^2(2\dot{\theta_1}^2 + \dot{\theta_2}^2 + 2\dot{\theta_1}\dot{\theta_2}\cos(\theta_1-\theta_2)) + mgl(2\cos\theta_1 + \cos\theta_2)}
-    $$
+    $$ \boxed{L := T-V=\frac{1}{2}ml^2(2\dot{\theta_1}^2 + \dot{\theta_2}^2 + 2\dot{\theta_1}\dot{\theta_2}\cos(\theta_1-\theta_2)) + mgl(2\cos\theta_1 + \cos\theta_2)} $$
 
     Now that we have derived the Lagrangian of our system, we can use the Euler-Lagrange equations in order to obtain the equations
     of motion (EOM). Note that (\(q,\dot{q} \)) are the generalized coordinates.
@@ -216,18 +259,18 @@ $$
 \boxed{\theta_2 = \arccos(1-2\cos\theta_1)}
 $$
 
-<div style="text-align: center;">
-  <img src="EnergeticsCurve.jpg" style="width: 75%;">
-</div>
 
-The figure above (what I will call the 'energetics map') displays a large island where neither pendulum has enough energy to 'flip' inside the region. This fact 
-holds true for late time which will later be confirmed with a numerical analysis. In order to estimate when the second pendulum will 'flip', I will create
-a fractal map. For now, we will first familiarize ourselves with the systems behavior.
+  <img src="EnergeticsCurve.jpg" style="width: 75%; margin-left: 12.5%;">
+
+  $$ $$
+  The figure above (what I will call the 'energetics map') displays a large island where neither pendulum has enough energy to 'flip' inside the region. This fact 
+  holds true for late time which will later be confirmed with a numerical analysis. In order to estimate when the second pendulum will 'flip', I will create
+  a fractal map. For now, we will first familiarize ourselves with the systems behavior.
   </p>
 
-  <h3 style="margin: 0%; text-decoration: underline;">
+  <h2 style="margin: 0%; text-decoration: underline;">
     Numerical Analysis/Simulation
-  </h3>
+  </h2>
   <p style="text-indent: 30px;">
    To start my analysis, I have numerically solved the equations of motion for a simple initial condition: \(\theta_1=\theta_2=\frac{\pi}{2} \).
    We note that this particulat initial condition resides outside of the energetically stable island; hence, we can expect the pendulum to flip in finite 
@@ -276,19 +319,17 @@ a fractal map. For now, we will first familiarize ourselves with the systems beh
   As we can see, Autodesk Inventor's model behaves similar to our numerical model despite their respective moments of
   inertia being different. (**side note: I am currently building this model**). Now that we have established that the double pendulum 
   is a chaotic system, I will attempt to make order of this chaos using fractal maps. The goal here is to determine if the second
-  pendulum will flip within some time domain: let's say \( t\in [0-25s] \). If the second pendulum does flip within the domain,
+  pendulum will flip within some time domain: let's say \( t\in [0,25s] \). If the second pendulum does flip within the domain,
    its initial data will get saved. Clearly, this is just a matter of initial conditions; hence, our map will be \(\theta_1 \) 
   vs \(\theta_2 \). The numerical appraoch is as follows: create two arrays of \(\theta_1\) and \(\theta_2\) values, numerically 
   simulate the double pendulum for each pair of initial conditions (\(\theta_1\) and \(\theta_2)\), create a contour plot where 'time'
   is the domain we are contouring. 
 
-  <div style="text-align: center;">
     <img src="DoublePendulumFractal1MGP.jpg" style="width: 99%;">
-  </div>
 
   The figure above is my fractal map of the system (~10 million grid points using parallel computing). I claim that this map accurately captures the chaotic nature of our system,
   but displays well-defined features/patterns that give more valuable insight into predicting results. As we can see, there is a 
-  large island with a pair of buds. This regime (marked in black) is where the pendulum does not flip. The other colors (orange - red)
+  large island with a pair of buds. This regime (marked in black) is where the pendulum does not flip. The other colors (blue - red)
   represent the time at which the second pendulum does flip. Since the buds branching off of the island were not predicted by 
   the energetics map, I will investigate.
 
